@@ -17,6 +17,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -110,7 +111,7 @@ class StayTest extends AbstractTest {
         Stay stay = StayFactory.createStayForBooking(stayId, booking, bookingNo, arrivalDate, departureDate, numberOfPersons, selectedCategoriesRoomCount, guestId, paymentInformation);
 
         // when
-        Invoice invoice = stay.composeInvoice(selectedCategoriesRoomCount.keySet().stream().toList(), guest.getDiscountRate());
+        Invoice invoice = stay.composeInvoice(selectedCategoriesRoomCount.keySet().stream().collect(Collectors.toList(), guest.getDiscountRate()));
         stay.checkout();
 
         // then
